icon on mobile fixed

--- a/utilities/scss/_responsive.scss
+++ b/utilities/scss/_responsive.scss
@@ -314,6 +314,16 @@
     .mb-icon {
         display:block;
     }
+    .expand .fa-chevron-down {
+        -moz-transition: all .2s linear;
+        -webkit-transition: all .2s linear;
+        transition: all .2s linear;
+    }
+    .expand .fa-chevron-down.rotate {
+        -moz-transform:rotate(180deg);
+        -webkit-transform:rotate(180deg);
+        transform:rotate(180deg);
+    }
 
     
     
