--- a/utilities/scss/main.css
+++ b/utilities/scss/main.css
@@ -10364,6 +10364,18 @@ td.btn-collapse {
   .mb-icon {
     display: block;
   }
+
+  .expand .fa-chevron-down {
+    -moz-transition: all 0.2s linear;
+    -webkit-transition: all 0.2s linear;
+    transition: all 0.2s linear;
+  }
+
+  .expand .fa-chevron-down.rotate {
+    -moz-transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
